lab02/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMMENT
    CONTINUE
    ELSE
    FOR
    IF
    PRINT
    RETURN
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment ;
Rule 7     assignment -> assign_id = expression
Rule 8     assignment -> assign_id MUL_ASSIGN expression
Rule 9     assignment -> assign_id DIV_ASSIGN expression
Rule 10    assignment -> assign_id PLUS_ASSIGN expression
Rule 11    assignment -> assign_id SUB_ASSIGN expression
Rule 12    assign_id -> ID
Rule 13    assign_id -> ID vector
Rule 14    expression -> expression_binop
Rule 15    expression -> expression_relop
Rule 16    expression -> expression_unary
Rule 17    expression -> matrix_funcs
Rule 18    expression -> constant
Rule 19    expression -> ID
Rule 20    expression -> matrix
Rule 21    expression -> ( expression )
Rule 22    expression_binop -> expression + expression
Rule 23    expression_binop -> expression - expression
Rule 24    expression_binop -> expression * expression
Rule 25    expression_binop -> expression / expression
Rule 26    expression_binop -> expression MATRIX_PLUS expression
Rule 27    expression_binop -> expression MATRIX_SUB expression
Rule 28    expression_binop -> expression MATRIX_MUL expression
Rule 29    expression_binop -> expression MATRIX_DIV expression
Rule 30    expression_relop -> expression RELOP_EQ expression
Rule 31    expression_relop -> expression RELOP_GT expression
Rule 32    expression_relop -> expression RELOP_LT expression
Rule 33    expression_relop -> expression RELOP_GE expression
Rule 34    expression_relop -> expression RELOP_LE expression
Rule 35    expression_relop -> expression RELOP_NE expression
Rule 36    expression_unary -> - expression
Rule 37    expression_unary -> expression '
Rule 38    matrix_funcs -> ZEROS ( DT_INTEGER )
Rule 39    matrix_funcs -> ONES ( DT_INTEGER )
Rule 40    matrix_funcs -> EYE ( DT_INTEGER )
Rule 41    constant -> DT_STRING
Rule 42    constant -> number
Rule 43    matrix -> [ vectors ]
Rule 44    vectors -> vector
Rule 45    vectors -> vectors , vector
Rule 46    vector -> [ numbers ]
Rule 47    numbers -> numbers , number
Rule 48    numbers -> number
Rule 49    numbers -> <empty>
Rule 50    number -> DT_INTEGER
Rule 51    number -> DT_FLOAT

Terminals, with rules where they appear

'                    : 37
(                    : 21 38 39 40
)                    : 21 38 39 40
*                    : 24
+                    : 22
,                    : 45 47
-                    : 23 36
/                    : 25
;                    : 6
=                    : 7
BREAK                : 
COMMENT              : 
CONTINUE             : 
DIV_ASSIGN           : 9
DT_FLOAT             : 51
DT_INTEGER           : 38 39 40 50
DT_STRING            : 41
ELSE                 : 
EYE                  : 40
FOR                  : 
ID                   : 12 13 19
IF                   : 
MATRIX_DIV           : 29
MATRIX_MUL           : 28
MATRIX_PLUS          : 26
MATRIX_SUB           : 27
MUL_ASSIGN           : 8
ONES                 : 39
PLUS_ASSIGN          : 10
PRINT                : 
RELOP_EQ             : 30
RELOP_GE             : 33
RELOP_GT             : 31
RELOP_LE             : 34
RELOP_LT             : 32
RELOP_NE             : 35
RETURN               : 
SUB_ASSIGN           : 11
WHILE                : 
ZEROS                : 38
[                    : 43 46
]                    : 43 46
error                : 

Nonterminals, with rules where they appear

assign_id            : 7 8 9 10 11
assignment           : 6
constant             : 18
expression           : 7 8 9 10 11 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37
expression_binop     : 14
expression_relop     : 15
expression_unary     : 16
instruction          : 4 5
instructions         : 2 4
instructions_opt     : 1
matrix               : 20
matrix_funcs         : 17
number               : 42 47 48
numbers              : 46 47
program              : 0
vector               : 13 44 45
vectors              : 43 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) assignment -> . assign_id = expression
    (8) assignment -> . assign_id MUL_ASSIGN expression
    (9) assignment -> . assign_id DIV_ASSIGN expression
    (10) assignment -> . assign_id PLUS_ASSIGN expression
    (11) assignment -> . assign_id SUB_ASSIGN expression
    (12) assign_id -> . ID
    (13) assign_id -> . ID vector

    $end            reduce using rule 3 (instructions_opt -> .)
    ID              shift and go to state 7

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    assign_id                      shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . assignment ;
    (7) assignment -> . assign_id = expression
    (8) assignment -> . assign_id MUL_ASSIGN expression
    (9) assignment -> . assign_id DIV_ASSIGN expression
    (10) assignment -> . assign_id PLUS_ASSIGN expression
    (11) assignment -> . assign_id SUB_ASSIGN expression
    (12) assign_id -> . ID
    (13) assign_id -> . ID vector

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    ID              shift and go to state 7

    instruction                    shift and go to state 8
    assignment                     shift and go to state 5
    assign_id                      shift and go to state 6

state 4

    (5) instructions -> instruction .

    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> assignment . ;

    ;               shift and go to state 9


state 6

    (7) assignment -> assign_id . = expression
    (8) assignment -> assign_id . MUL_ASSIGN expression
    (9) assignment -> assign_id . DIV_ASSIGN expression
    (10) assignment -> assign_id . PLUS_ASSIGN expression
    (11) assignment -> assign_id . SUB_ASSIGN expression

    =               shift and go to state 10
    MUL_ASSIGN      shift and go to state 11
    DIV_ASSIGN      shift and go to state 12
    PLUS_ASSIGN     shift and go to state 13
    SUB_ASSIGN      shift and go to state 14


state 7

    (12) assign_id -> ID .
    (13) assign_id -> ID . vector
    (46) vector -> . [ numbers ]

    =               reduce using rule 12 (assign_id -> ID .)
    MUL_ASSIGN      reduce using rule 12 (assign_id -> ID .)
    DIV_ASSIGN      reduce using rule 12 (assign_id -> ID .)
    PLUS_ASSIGN     reduce using rule 12 (assign_id -> ID .)
    SUB_ASSIGN      reduce using rule 12 (assign_id -> ID .)
    [               shift and go to state 16

    vector                         shift and go to state 15

state 8

    (4) instructions -> instructions instruction .

    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)


state 9

    (6) instruction -> assignment ; .

    ID              reduce using rule 6 (instruction -> assignment ; .)
    $end            reduce using rule 6 (instruction -> assignment ; .)


state 10

    (7) assignment -> assign_id = . expression
    (14) expression -> . expression_binop
    (15) expression -> . expression_relop
    (16) expression -> . expression_unary
    (17) expression -> . matrix_funcs
    (18) expression -> . constant
    (19) expression -> . ID
    (20) expression -> . matrix
    (21) expression -> . ( expression )
    (22) expression_binop -> . expression + expression
    (23) expression_binop -> . expression - expression
    (24) expression_binop -> . expression * expression
    (25) expression_binop -> . expression / expression
    (26) expression_binop -> . expression MATRIX_PLUS expression
    (27) expression_binop -> . expression MATRIX_SUB expression
    (28) expression_binop -> . expression MATRIX_MUL expression
    (29) expression_binop -> . expression MATRIX_DIV expression
    (30) expression_relop -> . expression RELOP_EQ expression
    (31) expression_relop -> . expression RELOP_GT expression
    (32) expression_relop -> . expression RELOP_LT expression
    (33) expression_relop -> . expression RELOP_GE expression
    (34) expression_relop -> . expression RELOP_LE expression
    (35) expression_relop -> . expression RELOP_NE expression
    (36) expression_unary -> . - expression
    (37) expression_unary -> . expression '
    (38) matrix_funcs -> . ZEROS ( DT_INTEGER )
    (39) matrix_funcs -> . ONES ( DT_INTEGER )
    (40) matrix_funcs -> . EYE ( DT_INTEGER )
    (41) constant -> . DT_STRING
    (42) constant -> . number
    (43) matrix -> . [ vectors ]
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ID              shift and go to state 23
    (               shift and go to state 25
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    DT_STRING       shift and go to state 31
    [               shift and go to state 33
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    expression                     shift and go to state 17
    expression_binop               shift and go to state 18
    expression_relop               shift and go to state 19
    expression_unary               shift and go to state 20
    matrix_funcs                   shift and go to state 21
    constant                       shift and go to state 22
    matrix                         shift and go to state 24
    number                         shift and go to state 32

state 11

    (8) assignment -> assign_id MUL_ASSIGN . expression
    (14) expression -> . expression_binop
    (15) expression -> . expression_relop
    (16) expression -> . expression_unary
    (17) expression -> . matrix_funcs
    (18) expression -> . constant
    (19) expression -> . ID
    (20) expression -> . matrix
    (21) expression -> . ( expression )
    (22) expression_binop -> . expression + expression
    (23) expression_binop -> . expression - expression
    (24) expression_binop -> . expression * expression
    (25) expression_binop -> . expression / expression
    (26) expression_binop -> . expression MATRIX_PLUS expression
    (27) expression_binop -> . expression MATRIX_SUB expression
    (28) expression_binop -> . expression MATRIX_MUL expression
    (29) expression_binop -> . expression MATRIX_DIV expression
    (30) expression_relop -> . expression RELOP_EQ expression
    (31) expression_relop -> . expression RELOP_GT expression
    (32) expression_relop -> . expression RELOP_LT expression
    (33) expression_relop -> . expression RELOP_GE expression
    (34) expression_relop -> . expression RELOP_LE expression
    (35) expression_relop -> . expression RELOP_NE expression
    (36) expression_unary -> . - expression
    (37) expression_unary -> . expression '
    (38) matrix_funcs -> . ZEROS ( DT_INTEGER )
    (39) matrix_funcs -> . ONES ( DT_INTEGER )
    (40) matrix_funcs -> . EYE ( DT_INTEGER )
    (41) constant -> . DT_STRING
    (42) constant -> . number
    (43) matrix -> . [ vectors ]
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ID              shift and go to state 23
    (               shift and go to state 25
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    DT_STRING       shift and go to state 31
    [               shift and go to state 33
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    expression                     shift and go to state 35
    expression_binop               shift and go to state 18
    expression_relop               shift and go to state 19
    expression_unary               shift and go to state 20
    matrix_funcs                   shift and go to state 21
    constant                       shift and go to state 22
    matrix                         shift and go to state 24
    number                         shift and go to state 32

state 12

    (9) assignment -> assign_id DIV_ASSIGN . expression
    (14) expression -> . expression_binop
    (15) expression -> . expression_relop
    (16) expression -> . expression_unary
    (17) expression -> . matrix_funcs
    (18) expression -> . constant
    (19) expression -> . ID
    (20) expression -> . matrix
    (21) expression -> . ( expression )
    (22) expression_binop -> . expression + expression
    (23) expression_binop -> . expression - expression
    (24) expression_binop -> . expression * expression
    (25) expression_binop -> . expression / expression
    (26) expression_binop -> . expression MATRIX_PLUS expression
    (27) expression_binop -> . expression MATRIX_SUB expression
    (28) expression_binop -> . expression MATRIX_MUL expression
    (29) expression_binop -> . expression MATRIX_DIV expression
    (30) expression_relop -> . expression RELOP_EQ expression
    (31) expression_relop -> . expression RELOP_GT expression
    (32) expression_relop -> . expression RELOP_LT expression
    (33) expression_relop -> . expression RELOP_GE expression
    (34) expression_relop -> . expression RELOP_LE expression
    (35) expression_relop -> . expression RELOP_NE expression
    (36) expression_unary -> . - expression
    (37) expression_unary -> . expression '
    (38) matrix_funcs -> . ZEROS ( DT_INTEGER )
    (39) matrix_funcs -> . ONES ( DT_INTEGER )
    (40) matrix_funcs -> . EYE ( DT_INTEGER )
    (41) constant -> . DT_STRING
    (42) constant -> . number
    (43) matrix -> . [ vectors ]
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ID              shift and go to state 23
    (               shift and go to state 25
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    DT_STRING       shift and go to state 31
    [               shift and go to state 33
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    expression                     shift and go to state 36
    expression_binop               shift and go to state 18
    expression_relop               shift and go to state 19
    expression_unary               shift and go to state 20
    matrix_funcs                   shift and go to state 21
    constant                       shift and go to state 22
    matrix                         shift and go to state 24
    number                         shift and go to state 32

state 13

    (10) assignment -> assign_id PLUS_ASSIGN . expression
    (14) expression -> . expression_binop
    (15) expression -> . expression_relop
    (16) expression -> . expression_unary
    (17) expression -> . matrix_funcs
    (18) expression -> . constant
    (19) expression -> . ID
    (20) expression -> . matrix
    (21) expression -> . ( expression )
    (22) expression_binop -> . expression + expression
    (23) expression_binop -> . expression - expression
    (24) expression_binop -> . expression * expression
    (25) expression_binop -> . expression / expression
    (26) expression_binop -> . expression MATRIX_PLUS expression
    (27) expression_binop -> . expression MATRIX_SUB expression
    (28) expression_binop -> . expression MATRIX_MUL expression
    (29) expression_binop -> . expression MATRIX_DIV expression
    (30) expression_relop -> . expression RELOP_EQ expression
    (31) expression_relop -> . expression RELOP_GT expression
    (32) expression_relop -> . expression RELOP_LT expression
    (33) expression_relop -> . expression RELOP_GE expression
    (34) expression_relop -> . expression RELOP_LE expression
    (35) expression_relop -> . expression RELOP_NE expression
    (36) expression_unary -> . - expression
    (37) expression_unary -> . expression '
    (38) matrix_funcs -> . ZEROS ( DT_INTEGER )
    (39) matrix_funcs -> . ONES ( DT_INTEGER )
    (40) matrix_funcs -> . EYE ( DT_INTEGER )
    (41) constant -> . DT_STRING
    (42) constant -> . number
    (43) matrix -> . [ vectors ]
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ID              shift and go to state 23
    (               shift and go to state 25
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    DT_STRING       shift and go to state 31
    [               shift and go to state 33
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    expression                     shift and go to state 37
    expression_binop               shift and go to state 18
    expression_relop               shift and go to state 19
    expression_unary               shift and go to state 20
    matrix_funcs                   shift and go to state 21
    constant                       shift and go to state 22
    matrix                         shift and go to state 24
    number                         shift and go to state 32

state 14

    (11) assignment -> assign_id SUB_ASSIGN . expression
    (14) expression -> . expression_binop
    (15) expression -> . expression_relop
    (16) expression -> . expression_unary
    (17) expression -> . matrix_funcs
    (18) expression -> . constant
    (19) expression -> . ID
    (20) expression -> . matrix
    (21) expression -> . ( expression )
    (22) expression_binop -> . expression + expression
    (23) expression_binop -> . expression - expression
    (24) expression_binop -> . expression * expression
    (25) expression_binop -> . expression / expression
    (26) expression_binop -> . expression MATRIX_PLUS expression
    (27) expression_binop -> . expression MATRIX_SUB expression
    (28) expression_binop -> . expression MATRIX_MUL expression
    (29) expression_binop -> . expression MATRIX_DIV expression
    (30) expression_relop -> . expression RELOP_EQ expression
    (31) expression_relop -> . expression RELOP_GT expression
    (32) expression_relop -> . expression RELOP_LT expression
    (33) expression_relop -> . expression RELOP_GE expression
    (34) expression_relop -> . expression RELOP_LE expression
    (35) expression_relop -> . expression RELOP_NE expression
    (36) expression_unary -> . - expression
    (37) expression_unary -> . expression '
    (38) matrix_funcs -> . ZEROS ( DT_INTEGER )
    (39) matrix_funcs -> . ONES ( DT_INTEGER )
    (40) matrix_funcs -> . EYE ( DT_INTEGER )
    (41) constant -> . DT_STRING
    (42) constant -> . number
    (43) matrix -> . [ vectors ]
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ID              shift and go to state 23
    (               shift and go to state 25
    -               shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 29
    EYE             shift and go to state 30
    DT_STRING       shift and go to state 31
    [               shift and go to state 33
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    expression                     shift and go to state 38
    expression_binop               shift and go to state 18
    expression_relop               shift and go to state 19
    expression_unary               shift and go to state 20
    matrix_funcs                   shift and go to state 21
    constant                       shift and go to state 22
    matrix                         shift and go to state 24
    number                         shift and go to state 32

state 15

    (13) assign_id -> ID vector .

    =               reduce using rule 13 (assign_id -> ID vector .)
    MUL_ASSIGN      reduce using rule 13 (assign_id -> ID vector .)
    DIV_ASSIGN      reduce using rule 13 (assign_id -> ID vector .)
    PLUS_ASSIGN     reduce using rule 13 (assign_id -> ID vector .)
    SUB_ASSIGN      reduce using rule 13 (assign_id -> ID vector .)


state 16

    (46) vector -> [ . numbers ]
    (47) numbers -> . numbers , number
    (48) numbers -> . number
    (49) numbers -> .
    (50) number -> . DT_INTEGER
    (51) number -> . DT_FLOAT

    ]               reduce using rule 49 (numbers -> .)
    ,               reduce using rule 49 (numbers -> .)
    DT_INTEGER      shift and go to state 28
    DT_FLOAT        shift and go to state 34

    numbers                        shift and go to state 39
    number                         shift and go to state 40

state 17

    (7) assignment -> assign_id = expression .
    (22) expression_binop -> expression . + expression
    (23) expression_binop -> expression . - expression
    (24) expression_binop -> expression . * expression
    (25) expression_binop -> expression . / expression
    (26) expression_binop -> expression . MATRIX_PLUS expression
    (27) expression_binop -> expression . MATRIX_SUB expression
    (28) expression_binop -> expression . MATRIX_MUL expression
    (29) expression_binop -> expression . MATRIX_DIV expression
    (30) expression_relop -> expression . RELOP_EQ expression
    (31) expression_relop -> expression . RELOP_GT expression
    (32) expression_relop -> expression . RELOP_LT expression
    (33) expression_relop -> expression . RELOP_GE expression
    (34) expression_relop -> expression . RELOP_LE expression
    (35) expression_relop -> expression . RELOP_NE expression
    (37) expression_unary -> expression . '

    ;               reduce using rule 7 (assignment -> assign_id = expression .)
    +               shift and go to state 41
    -               shift and go to state 42
    *               shift and go to state 43
    /               shift and go to state 44
    MATRIX_PLUS     shift and go to state 45
    MATRIX_SUB      shift and go to state 46
    MATRIX_MUL      shift and go to state 47
    MATRIX_DIV      shift and go to state 48
    RELOP_EQ        shift and go to state 49
    RELOP_GT        shift and go to state 50
    RELOP_LT        shift and go to state 51
    RELOP_GE        shift and go to state 52
    RELOP_LE        shift and go to state 53
    RELOP_NE        shift and go to state 54
    '               shift and go to state 55


state 18

    (14) expression -> expression_binop .

    +               reduce using rule 14 (expression -> expression_binop .)
    -               reduce using rule 14 (expression -> expression_binop .)
    *               reduce using rule 14 (expression -> expression_binop .)
    /               reduce using rule 14 (expression -> expression_binop .)
    MATRIX_PLUS     reduce using rule 14 (expression -> expression_binop .)
    MATRIX_SUB      reduce using rule 14 (expression -> expression_binop .)
    MATRIX_MUL      reduce using rule 14 (expression -> expression_binop .)
    MATRIX_DIV      reduce using rule 14 (expression -> expression_binop .)
    RELOP_EQ        reduce using rule 14 (expression -> expression_binop .)
    RELOP_GT        reduce using rule 14 (expression -> expression_binop .)
    RELOP_LT        reduce using rule 14 (expression -> expression_binop .)
    RELOP_GE        reduce using rule 14 (expression -> expression_binop .)
    RELOP_LE        reduce using rule 14 (expression -> expression_binop .)
    RELOP_NE        reduce using rule 14 (expression -> expression_binop .)
    '               reduce using rule 14 (expression -> expression_binop .)
    ;               reduce using rule 14 (expression -> expression_binop .)
    )               reduce using rule 14 (expression -> expression_binop .)


state 19

    (15) expression -> expression_relop .

    +               reduce using rule 15 (expression -> expression_relop .)
    -               reduce using rule 15 (expression -> expression_relop .)
    *               reduce using rule 15 (expression -> expression_relop .)
    /               reduce using rule 15 (expression -> expression_relop .)
    MATRIX_PLUS     reduce using rule 15 (expression -> expression_relop .)
    MATRIX_SUB      reduce using rule 15 (expression -> expression_relop .)
    MATRIX_MUL      reduce using rule 15 (expression -> expression_relop .)
    MATRIX_DIV      reduce using rule 15 (expression -> expression_relop .)
    RELOP_EQ        reduce using rule 15 (expression -> expression_relop .)
    RELOP_GT        reduce using rule 15 (expression -> expression_relop .)
    RELOP_LT        reduce using rule 15 (expression -> expression_relop .)
    RELOP_GE        reduce using rule 15 (expression -> expression_relop .)
    RELOP_LE        reduce using rule 15 (expression -> expression_relop .)
    RELOP_NE        reduce using rule 15 (expression -> expression_relop .)
    '               reduce using rule 15 (expression -> expression_relop .)
    ;               reduce using rule 15 (expression -> expression_relop .)
    )               reduce using rule 15 (expression -> expression_relop .)


state 20

    (16) expression -> expression_unary .

    +               reduce using rule 16 (expression -> expression_unary .)
    -               reduce using rule 16 (expression -> expression_unary .)
    *               reduce using rule 16 (expression -> expression_unary .)
    /               reduce using rule 16 (expression -> expression_unary .)
    MATRIX_PLUS     reduce using rule 16 (expression -> expression_unary .)
    MATRIX_SUB      reduce using rule 16 (expression -> expression_unary .)
    MATRIX_MUL      reduce using rule 16 (expression -> expression_unary .)
    MATRIX_DIV      reduce using rule 16 (expression -> expression_unary .)
    RELOP_EQ        reduce using rule 16 (expression -> expression_unary .)
    RELOP_GT        reduce using rule 16 (expression -> expression_unary .)
    RELOP_LT        reduce using rule 16 (expression -> expression_unary .)
    RELOP_GE        reduce using rule 16 (expression -> expression_unary .)
    RELOP_LE        reduce using rule 16 (expression -> expression_unary .)
    RELOP_NE        reduce using rule 16 (expression -> expression_unary .)
    '               reduce using rule 16 (expression -> expression_unary .)
    ;               reduce using rule 16 (expression -> expression_unary .)
    )               reduce using rule 16 (expression -> expression_unary .)


state 21

    (17) expression -> matrix_funcs .

    +               reduce using rule 17 (expression -> matrix_funcs .)
    -               reduce using rule 17 (expression -> matrix_funcs .)
    *               reduce using rule 17 (expression -> matrix_funcs .)
    /               reduce using rule 17 (expression -> matrix_funcs .)
    MATRIX_PLUS     reduce using rule 17 (expression -> matrix_funcs .)
    MATRIX_SUB      reduce using rule 17 (expression -> matrix_funcs .)
    MATRIX_MUL      reduce using rule 17 (expression -> matrix_funcs .)
    MATRIX_DIV      reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_EQ        reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_GT        reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_LT        reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_GE        reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_LE        reduce using rule 17 (expression -> matrix_funcs .)
    RELOP_NE        reduce using rule 17 (expression -> matrix_funcs .)
    '               reduce using rule 17 (expression -> matrix_funcs .)
    ;               reduce using rule 17 (expression -> matrix_funcs .)
    )               reduce using rule 17 (expression -> matrix_funcs .)


state 22

    (18) expression -> constant .

    +               reduce using rule 18 (expression -> constant .)
    -               reduce using rule 18 (expression -> constant .)
    *               reduce using rule 18 (expression -> constant .)
    /               reduce using rule 18 (expression -> constant .)
    MATRIX_PLUS     reduce using rule 18 (expression -> constant .)
    MATRIX_SUB      reduce using rule 18 (expression -> constant .)
    MATRIX_MUL      reduce using rule 18 (expression -> constant .)
    MATRIX_DIV      reduce using rule 18 (expression -> constant .)
    RELOP_EQ        reduce using rule 18 (expression -> constant .)
    RELOP_GT        reduce using rule 18 (expression -> constant .)
    RELOP_LT        reduce using rule 18 (expression -> constant .)
    RELOP_GE        reduce using rule 18 (expression -> constant .)
    RELOP_LE        reduce using rule 18 (expression -> constant .)
    RELOP_NE        reduce using rule 18 (expression -> constant .)
    '               reduce using rule 18 (expression -> constant .)
    ;               reduce using rule 18 (expression -> constant .)
    )               reduce using rule 18 (expression -> constant .)


state 23

    (19) expression -> ID .
